# nixpkgs-static-repo

./: .gitignore  README.md  flake.nix  myprogram.cabal  stack.yaml
src/: Main.hs  MyLib.hs
