cabal-version:      3.4
name:               myprogram
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-2-Clause
license-file:       LICENSE
author:             Domen Kožar
maintainer:         domen@dev.si
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base <5, raw-strings-qq
    hs-source-dirs:   src
    default-language: Haskell2010
