cabal-version:      3.4
name:               myprogram
version:            0.1.0.0
license:            BSD-2-Clause
author:             Domen Kožar
maintainer:         domen@dev.si
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable myprogram
    import:           warnings
    main-is:          Main.hs
    build-depends:    base <5, raw-strings-qq, sqlite-easy
    other-modules: Paths_myprogram
    autogen-modules: Paths_myprogram
    hs-source-dirs:   src
    default-language: Haskell2010
